improve of css buttons already colocated in its respective places makes left add functionality by javascript

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="calculatorContainer">
         <div class="calculatorDisplay">display</div>
         <div class="buttonsContainer">
-            <button class="CAbutton"> CA</button>
+            <button class="cabutton">CA</button>
             <button class="divideButton">%</button>
             <button class="multiplyButton">*</button>
             <button class ="additionButton">+</button>
@@ -21,10 +21,11 @@
             <button class="fourButton">4</button>
             <button class="fiveButton">5</button>
             <button class="sixButton">6</button>
-            <button class="seveButton">7</button>
+            <button class="sevenButton">7</button>
             <button class="eightButton">8</button>
             <button class="nineButton">9</button>
             <button class="ceroButton">0</button>
+            <button class="equalButton">=</button>
         </div>
     </div>
 </body>
