--- a/index.html
+++ b/index.html
@@ -7,26 +7,28 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="calculatorContainer">
-        <div class="calculatorDisplay">display</div>
-        <div class="buttonsContainer">
-            <button class="cabutton">CA</button>
-            <button class="divideButton">%</button>
-            <button class="multiplyButton">*</button>
-            <button class ="additionButton">+</button>
-            <button class="subtractionButton">-</button>
-            <button class="oneButton">1</button>
-            <button class="twoButton">2</button>
-            <button class="threeButton">3</button>
-            <button class="fourButton">4</button>
-            <button class="fiveButton">5</button>
-            <button class="sixButton">6</button>
-            <button class="sevenButton">7</button>
-            <button class="eightButton">8</button>
-            <button class="nineButton">9</button>
-            <button class="ceroButton">0</button>
-            <button class="equalButton">=</button>
+    <div class="calculadora">
+        <div id="pantalla">display</div>
+        <div class="botones">
+            <button onclick ="limpiar()" class="cabutton">CA</button>
+            <button onclick ="agregar('/')" class="divideButton">/</button>
+            <button onclick ="agregar('*')" class="multiplyButton">*</button>
+            <button onclick ="agregar('+')" class ="additionButton">+</button>
+            <button onclick ="agregar('-')" class="subtractionButton">-</button>
+            <button onclick ="agregar('1')" class="oneButton">1</button>
+            <button onclick ="agregar('2')" class="twoButton">2</button>
+            <button onclick ="agregar('3')" class="threeButton">3</button>
+            <button onclick ="agregar('4')" class="fourButton">4</button>
+            <button onclick ="agregar('5')" class="fiveButton">5</button>
+            <button onclick ="agregar('6')" class="sixButton">6</button>
+            <button onclick ="agregar('7')" class="sevenButton">7</button>
+            <button onclick ="agregar('8')" class="eightButton">8</button>
+            <button onclick ="agregar('9')" class="nineButton">9</button>
+            <button onclick ="agregar('0')" class="ceroButton">0</button>
+            <button onclick ="calcular()" class="equalButton">=</button>
+            <button onclick="agregar('.')"class="punto">.</button>
         </div>
     </div>
+    <script src="calculator.js"></script>
 </body>
 </html>
